# fast_api_do_zero

./: README.md
fast_zero/: .coverage  .gitignore  database.db  pyproject.toml
fast_zero/fast_zero/: app.py  database.py  models.py  schemas.py  settings.py
fast_zero/migrations/: env.py
fast_zero/migrations/versions/: bdd281afd961_create_users_table.py
fast_zero/tests/: conftest.py  test_app.py  test_db.py
